test/corpus/examples/ai/features/flux0.txt
=====
Flux0
=====

// our UGen/UAna patch
SinOsc s => FFT fft =^ Flux flux => blackhole;

// compute sample rate
second / samp => float srate;
// set a nice frequency to minimize flux across frames
srate / 8 => s.freq;
// set fft size
1024 => fft.size;
// set window (optional here)
Windowing.hann( 1024 ) => fft.window;

// infinite time loop
while( true )
{
    // propogate the analysis computations (example: optional usage of blob)
    flux.upchuck() @=> UAnaBlob blob;
    // print it (should always be 0)
    <<< blob.fval(0) >>>;

    // hop along
    512::samp => now;
}


---

(source_file
  (comment)
  (statement
    (chuck_operation
      (chuck_operation
        (chuck_operation
          (variable_declaration
            (class_identifier)
            (variable_identifier))
          (chuck_operator)
          (variable_declaration
            (class_identifier)
            (variable_identifier)))
        (chuck_operator)
        (variable_declaration
          (class_identifier)
          (variable_identifier)))
      (chuck_operator)
      (keyword
        (global_unit_generator))))
  (comment)
  (statement
    (chuck_operation
      (binary_expression
        (keyword
          (duration_identifier))
        (operator)
        (keyword
          (duration_identifier)))
      (chuck_operator)
      (variable_declaration
        (primitive_type)
        (variable_identifier))))
  (comment)
  (statement
    (chuck_operation
      (binary_expression
        (variable_identifier)
        (operator)
        (int))
      (chuck_operator)
      (member_identifier
        (variable_identifier)
        (variable_identifier))))
  (comment)
  (statement
    (chuck_operation
      (int)
      (chuck_operator)
      (member_identifier
        (variable_identifier)
        (variable_identifier))))
  (comment)
  (statement
    (chuck_operation
      (function_call
        (member_identifier
          (class_identifier)
          (variable_identifier))
        (int))
      (chuck_operator)
      (member_identifier
        (variable_identifier)
        (variable_identifier))))
  (comment)
  (loop
    (keyword
      (boolean_literal_value))
    (block
      (comment)
      (statement
        (chuck_operation
          (function_call
            (member_identifier
              (variable_identifier)
              (variable_identifier)))
          (chuck_operator)
          (variable_declaration
            (class_identifier)
            (variable_identifier))))
      (comment)
      (statement
        (debug_print
          (function_call
            (member_identifier
              (variable_identifier)
              (variable_identifier))
            (int))))
      (comment)
      (statement
        (chuck_operation
          (dur
            (int)
            (duration_identifier))
          (chuck_operator)
          (keyword
            (special_literal_value)))))))
